# Synopsys_Homework

Elevator/: Command.cpp  Command.h  Compare.h  Elevator.cpp  Elevator.h  README.md  Request.cpp  Request.h  a.out  main.cpp
Homework_1/: countingValleys.cpp  jumping.cpp  repeatedString.cpp  sockMerchant.cpp
Homework_2/: arrayManipulation.cpp  hourglassSum.cpp  minimumBribes.cpp  rotLeft.cpp
Homework_3/: SherlockandTheValidString.cpp  a.out  alternatingCharacters.cpp  dynamic.c  dynamic_cast.cpp  dynamic_cast_vptr.cpp  makeAnagram.cpp
Homework_4/: hasCycle.cpp  insertNodeAtPosition.cpp  sortedInsert.cpp
Homework_5/: fibonacci.cpp  stepPerms.cpp  superDigit.cpp
Lambda/: a.out  lambda.cpp
LinkedList/: LinkedList.hpp  LinkedList.inl  main.cpp
MergeSort/: mergeSort.cpp
Meyers_test/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  17.cpp  18.cpp  19.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  a.out  main
PriorityQueue/: main.cpp  priority_queue.h  priority_queue.inl
SSO/: main.cpp  string (2).cpp  string .h
Stack/: a.out  stack.cpp
Vector_impl/: main.cpp  vector.cpp  vector.h  vector.inl
aa/: CMakeLists.txt
build-aa-Desktop-Debug/: CMakeCache.txt  Makefile  aa  cmake_install.cmake  qtcsettings.cmake
build-car-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-car_drive_simulation-Desktop-Debug/: CMakeCache.txt.prev  Makefile  car_drive_simulation  cmake_install.cmake
car/: CMakeCache.txt  CMakeLists.txt  car.cpp  car.h  car.qrc  main.cpp  n.cpp  n.h  scen.cpp  scen.h
car_drive_simulation/: car.cpp  (+4 more)
(+447 files in other folders)
